Fixed height problem on mobile

--- a/main.scss
+++ b/main.scss
@@ -61,7 +61,7 @@ body {
 	align-items: center;
 	justify-content: space-between;
 	width: 100%;
-	height: 100%;
+	height: 90%;
 	max-width: 390px;
 	max-height: 860px;
 	background: $displayColorDark;
@@ -73,6 +73,7 @@ body {
 		border-radius: 0;
 		max-width: none;
 		max-height: none;
+		height: 100%;
 	}
 }
 
@@ -148,7 +149,7 @@ body {
 	box-shadow: -5px 5px 9px #303030, 5px -5px 9px #383838, inset 0 0 0#303030, inset 0 0 0 #383838;
 	color: $textColorDark;
 	border: 1px solid $textColorDark;
-	border-radius: 30px;
+	border-radius: 25px;
 	font-family: $font1;
 	font-size: 1.5rem;
 	font-weight: 500;
