--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ body {
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  height: 100%;
+  height: 90%;
   max-width: 390px;
   max-height: 860px;
   background: #2d2d2d;
@@ -53,6 +53,7 @@ body {
     border-radius: 0;
     max-width: none;
     max-height: none;
+    height: 100%;
   }
 }
 
@@ -127,7 +128,7 @@ body {
   box-shadow: -5px 5px 9px #303030, 5px -5px 9px #383838, inset 0 0 0 #303030, inset 0 0 0 #383838;
   color: #d4d4d4;
   border: 1px solid #d4d4d4;
-  border-radius: 30px;
+  border-radius: 25px;
   font-family: "Roboto", sans-serif;
   font-size: 1.5rem;
   font-weight: 500;
